--- a/src/styles/utils/_typo.css
+++ b/src/styles/utils/_typo.css
@@ -1,3 +1,3 @@
 .text-muted {
-  opacity: 0.7;
+  color: var(--color-fg-muted);
 }
